--- a/test/test.cfg
+++ b/test/test.cfg
@@ -11,25 +11,29 @@ service = MessageLogger {
 service = Timing { }
 es_source = SiStripFedCablingFromXml {
         string Label="Fed1"
-        string XmlParsedFile="/localscratch/g/gennai/mtcc/fedconnections/tibPisa_example.dat"
+        string XmlParsedFile="./tibPisa_example.dat"
 }
 
+include "IORawData/SiStripInputSources/data/TBRUInputSource.cfi"
+replace TBRUInputSource.fileNames = { "file:RU0512863_000.root" }
 
-source = TBRUInputSource
-{
-        untracked vstring fileNames = { "file:/localscratch/g/gennai/mtcc/runs/RU0512863_000.root" }
-        untracked int32 maxEvents =1000 //@@ all events
-        #untracked int32 nFeds = 1 # not strictly necessary
-}
+include "EventFilter/SiStripRawToDigi/data/RawToDigi.cfi"
+ replace RawToDigi.UseFedKey = false
+#source = TBRUInputSource
+#{
+#        untracked vstring fileNames = { "file:RU0512863_000.root" }
+#        untracked int32 maxEvents =1000 //@@ all events
+#        #untracked int32 nFeds = 1 # not strictly necessary
+#}
 
-module RawToDigi = SiStripRawToDigiModule 
-{
-	string InputModuleLabel = "TBRUInputSource"
-	untracked int32 AppendedBytes = 0
-       	untracked int32 FedBufferDumpFreq = 0
-       	untracked bool  UseFedKey = false #@@ also false seems to be ok
-       	untracked int32 TriggerFedId = 1023
-}
+#module RawToDigi = SiStripRawToDigiModule 
+#{
+#	string InputModuleLabel = "TBRUInputSource"
+#	untracked int32 AppendedBytes = 0
+#       	untracked int32 FedBufferDumpFreq = 0
+#       	untracked bool  UseFedKey = false #@@ also false seems to be ok
+#       	untracked int32 TriggerFedId = 1023
+#}
 
 service = DaqMonitorROOTBackEnd {}
 
