*** empty log message ***

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -16,6 +16,7 @@ es_source = SiStripFedCablingFromXml {
 
 include "IORawData/SiStripInputSources/data/TBRUInputSource.cfi"
 replace TBRUInputSource.fileNames = { "file:RU0512863_000.root" }
+replace TBRUInputSource.maxEvents = 1000
 
 include "EventFilter/SiStripRawToDigi/data/RawToDigi.cfi"
  replace RawToDigi.UseFedKey = false
