*** empty log message ***

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -15,26 +15,11 @@ es_source = SiStripFedCablingFromXml {
 }
 
 include "IORawData/SiStripInputSources/data/TBRUInputSource.cfi"
-replace TBRUInputSource.fileNames = { "file:RU0512863_000.root" }
-replace TBRUInputSource.maxEvents = -1
+replace TBRUInputSource.fileNames = { "file:/tmp/gennai/RU0512863_000.root" }
+replace TBRUInputSource.maxEvents = 1000
 
 include "EventFilter/SiStripRawToDigi/data/RawToDigi.cfi"
  replace RawToDigi.UseFedKey = false
-#source = TBRUInputSource
-#{
-#        untracked vstring fileNames = { "file:RU0512863_000.root" }
-#        untracked int32 maxEvents =1000 //@@ all events
-#        #untracked int32 nFeds = 1 # not strictly necessary
-#}
-
-#module RawToDigi = SiStripRawToDigiModule
-#{
-#	string InputModuleLabel = "TBRUInputSource"
-#	untracked int32 AppendedBytes = 0
-#       	untracked int32 FedBufferDumpFreq = 0
-#       	untracked bool  UseFedKey = false #@@ also false seems to be ok
-#       	untracked int32 TriggerFedId = 1023
-#}
 
 service = DaqMonitorROOTBackEnd {}
 
