--- a/test/test.cfg
+++ b/test/test.cfg
@@ -8,7 +8,7 @@ service = MessageLogger {
 #	untracked vstring debugModules = { "*" } //@@ uncomment this line for debug statements!
 }
 
-service = Timing { }
+#service = Timing { }
 es_source = SiStripFedCablingFromXml {
         string Label="Fed1"
         string XmlParsedFile="./tibPisa_example.dat"
@@ -16,7 +16,7 @@ es_source = SiStripFedCablingFromXml {
 
 include "IORawData/SiStripInputSources/data/TBRUInputSource.cfi"
 replace TBRUInputSource.fileNames = { "file:/tmp/gennai/RU0512863_000.root" }
-replace TBRUInputSource.maxEvents = 1000
+replace TBRUInputSource.maxEvents = -1
 
 include "EventFilter/SiStripRawToDigi/data/RawToDigi.cfi"
  replace RawToDigi.UseFedKey = false
@@ -26,11 +26,8 @@ service = DaqMonitorROOTBackEnd {}
 module digimon = SiStripMonitorPedestals
 {
                 string DigiProducer="RawToDigi"
-		string OutPutFileName="prova.root"
-                untracked int32 AppendedBytes = 0
-                untracked int32 FedBufferDumpFreq = 0
+		string OutPutFileName="prova1.root"
                 untracked bool  UseFedKey = true
-                untracked int32 TriggerFedId = 1023
                 bool OutputMEsInRootFile = true
         PSet PedestalsPSet =
 {
