update of collection names

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -19,13 +19,13 @@ replace TBRUInputSource.fileNames = { "file:/tmp/gennai/RU0512863_000.root" }
 replace TBRUInputSource.maxEvents = -1
 
 include "EventFilter/SiStripRawToDigi/data/RawToDigi.cfi"
- replace RawToDigi.UseFedKey = false
+ replace siStripDigis.UseFedKey = false
 
 service = DaqMonitorROOTBackEnd {}
 
 module digimon = SiStripMonitorPedestals
 {
-                string DigiProducer="RawToDigi"
+                string DigiProducer="siStripDigis"
 		string OutPutFileName="prova1.root"
                 untracked bool  UseFedKey = true
                 bool OutputMEsInRootFile = true
@@ -47,6 +47,6 @@ int32 NumberOfEventsForIteration = 200
 
 
 
-path p = { RawToDigi, digimon}
+path p = { siStripDigis, digimon}
 }
 
