config file modified to access cond. DB

--- a/test/PedsMonWithDB.cfg
+++ b/test/PedsMonWithDB.cfg
@@ -16,18 +16,26 @@ process PEDESTALS = {
 
     service = LockService{ untracked vstring labels = {"source"} }
     
-    include "OnlineDB/SiStripESSources/data/BuildFedCablingUsingConfigDb.cfi"
-    replace BuildFedCablingUsingConfigDb.UsingDb = true
-    replace BuildFedCablingUsingConfigDb.User = "cms_TIB"
-    replace BuildFedCablingUsingConfigDb.Passwd = "TrackerInnerBarrel"
-    replace BuildFedCablingUsingConfigDb.Path = "cmsr"
-    replace BuildFedCablingUsingConfigDb.Partition = "TIB_TEST_061006014917"
-    #replace BuildFedCablingUsingConfigDb.MajorVersion = 8
-    #replace BuildFedCablingUsingConfigDb.MinorVersion = 13   
-    
+    es_source = PoolDBESSource {
+        VPSet toGet = {{ string record = "SiStripPedestalsRcd" string tag = "SiStripPedNoise_v1_p" }, { string record = "SiStripNoisesRcd" string tag = "SiStripPedNoise_v1_n" }, { string record = "SiStripFedCablingRcd" string tag = "SiStripCabling_v1" }}
+
+        bool loadAll = true
+        string connect = "oracle://devdb10/CMS_COND_STRIP"
+        untracked string catalog = "relationalcatalog_oracle://devdb10/CMS_COND_GENERAL"
+        string timetype = "runnumber"
+        untracked uint32 messagelevel = 3
+        untracked bool loadBlobStreamer = true
+        untracked uint32 authenticationMethod = 1
+    }
+     
     source = TBRUInputSource
     {
-	untracked vstring fileNames = { "file:/tmp/gennai/RU0800891_000.root" } // path and filename of "RU" file
+        untracked vstring fileNames = { "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_000.root",
+                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_001.root",
+                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_002.root",
+                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_003.root",
+                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_004.root",
+                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_005.root"}
 	untracked int32 maxEvents = -1		// number of events to process (-1 = "all")
 	#untracked int32 nFeds = 1 			// overrides number of found FEDs in "RU" file 
     }
@@ -39,30 +47,11 @@ process PEDESTALS = {
     
     # can comment out MonitorDeamon if you want to run without DQMCollector - this should go as include in DQMServices
     include "DQM/SiStripMonitorCluster/data/MonitorDaemon.cfi"
-    replace MonitorDaemon.DestinationAddress = "lxplus011.cern.ch"
-    
-module PedsMon = SiStripMonitorPedestals
-    {
-	string DigiProducer="SiStripDigis"
-	string OutPutFileName="prova1.root"
-	untracked bool  UseFedKey = true
-	bool OutputMEsInRootFile = true
-        PSet PedestalsPSet =
-	{
-	    string CalculatorAlgorithm = "TT6"
-	    int32 NumCMstripsInGroup =128
-	    int32 MaskCalculationFlag =1
-	    double MaskNoiseCut =3.
-	    double MaskDeadCut = 0.5
-	    double MaskTruncationCut = 0.05
-	    double CutToAvoidSignal =3.
-	    int32 NumberOfEventsForInit = 500
-	    int32 NumberOfEventsForIteration = 200
-	}
-	
-    }
+    replace MonitorDaemon.DestinationAddress = "localhost.cern.ch"
     
     
+     include "DQM/SiStripMonitorPedestals/data/SiStripMonitorPedestals.cfi"
+   
     
     path p = { SiStripDigis, PedsMon}
 }
