cfg file adopted for latest PoolDBESSource configuration (works from 1_7_0_pre5 onwards)

--- a/test/PedsMonWithDB.cfg
+++ b/test/PedsMonWithDB.cfg
@@ -16,43 +16,54 @@ process PEDESTALS = {
 
     service = LockService{ untracked vstring labels = {"source"} }
     
-    es_source = PoolDBESSource {
-        VPSet toGet = {{ string record = "SiStripPedestalsRcd" string tag = "SiStripPedNoise_v1_p" }, { string record = "SiStripNoisesRcd" string tag = "SiStripPedNoise_v1_n" }, { string record = "SiStripFedCablingRcd" string tag = "SiStripCabling_v1" }}
+  es_source = PoolDBESSource {
+    VPSet toGet = {
+      { string record = "SiStripPedestalsRcd" string tag = "SiStripPedNoise_TIBTOB_v1_p"},
+      { string record = "SiStripNoisesRcd" string tag = "SiStripPedNoise_TIBTOB_v1_n"},
+      { string record = "SiStripFedCablingRcd" string tag = "SiStripCabling_TIBTOB_v1"}}
+   
+      bool loadAll = true
+      string connect = "oracle://orcon/CMS_COND_STRIP"      
+      string timetype = "runnumber" 
+      untracked string BlobStreamerName="DefaultBlobStreamingService"
+      PSet DBParameters = {
+         untracked string authenticationPath ="/afs/cern.ch/cms/DB/conddb"
+         untracked int32 messageLevel = 1
+      }
+  }
 
-        bool loadAll = true
-        string connect = "oracle://devdb10/CMS_COND_STRIP"
-        untracked string catalog = "relationalcatalog_oracle://devdb10/CMS_COND_GENERAL"
-        string timetype = "runnumber"
-        untracked uint32 messagelevel = 3
-        untracked bool loadBlobStreamer = true
-        untracked uint32 authenticationMethod = 1
+  es_module sistripconn = SiStripConnectivity {}
+
+    source = PoolSource { 
+      untracked vstring fileNames = { "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.0.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.1.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.2.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.3.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.4.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.5.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.6.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.7.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.8.root",
+                                      "rfio:/castor/cern.ch/cms/store/TAC/TIBTOB/edm_2007_03_07/tif.00006215.A.testStorageManager_0.9.root"
+      }
     }
-     
-    source = TBRUInputSource
-    {
-        untracked vstring fileNames = { "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_000.root",
-                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_001.root",
-                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_002.root",
-                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_003.root",
-                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_004.root",
-                                        "castor:/castor/cern.ch/cms/testbeam/TAC/TIB/run/RU0000572_005.root"}
-	untracked int32 maxEvents = -1		// number of events to process (-1 = "all")
-	#untracked int32 nFeds = 1 			// overrides number of found FEDs in "RU" file 
-    }
+    untracked PSet maxEvents = {untracked int32 input = -1}
     
+   # > Digitization <
     include "EventFilter/SiStripRawToDigi/data/SiStripDigis.cfi"
-    replace SiStripDigis.UseFedKey =false
-    
+    replace SiStripDigis.ProductLabel = "source"
+
+    ######  DQM #####
     service = DaqMonitorROOTBackEnd {}
     
     # can comment out MonitorDeamon if you want to run without DQMCollector - this should go as include in DQMServices
-    include "DQM/SiStripMonitorCluster/data/MonitorDaemon.cfi"
-    replace MonitorDaemon.DestinationAddress = "localhost.cern.ch"
+#    include "DQM/SiStripMonitorCluster/data/MonitorDaemon.cfi"
+#    replace MonitorDaemon.DestinationAddress = "localhost.cern.ch"
     
     
-     include "DQM/SiStripMonitorPedestals/data/SiStripMonitorPedestals.cfi"
-   
-    
-    path p = { SiStripDigis, PedsMon}
-}
+    include "DQM/SiStripMonitorPedestals/data/SiStripMonitorPedestals.cfi"
+    include "DQM/SiStripMonitorPedestals/data/SiStripMonitorRawData.cfi"
 
+    
+    path p = { SiStripDigis, RawDataMon, PedsMon}
+}
