cfg file updated to read calibration data properly and DQMStore service added for histograms

--- a/test/QualityMon_TIFData.cfg
+++ b/test/QualityMon_TIFData.cfg
@@ -25,54 +25,12 @@ process TRACKRECONSTRUCTION = {
   ############ Access to ORCOFF via Frontier ############
 #-------------------------------------------------
 
+  #-------------------------------------------------
+  ## CALIBRATION
+  #-------------------------------------------------
 
-#-------------------------------------------------
-## CALIBRATION
-#-------------------------------------------------
-
-    ## CABLING
-    include "CalibTracker/Configuration/data/SiStrip_FrontierCabling.cfi"
-    replace siStripFedCabling.toGet={ { string record = "SiStripFedCablingRcd" string tag = "SiStripCabling_pass4_test_v1"} }
-    replace siStripFedCabling.connect = "oracle://cms_orcoff_int2r/CMS_COND_STRIP"
-    replace siStripFedCabling.DBParameters.authenticationPath="/afs/cern.ch/cms/DB/conddb"
-
-    ## SiStripQuality
-    es_source a = PoolDBESSource {
-	string appendToDataLabel = "SiStripBadModule_v1"
-	VPSet toGet = {	{ string record = "SiStripBadModuleRcd"  string tag = "SiStripBadModule_TBuffer_VenturiList_v1"} }
-	string connect = "oracle://cms_orcoff_int2r/CMS_COND_STRIP" 
-	#string connect = "sqlite_file:dbfile.db"
-	string timetype = "runnumber"
-	untracked string BlobStreamerName="TBufferBlobStreamingService"	   
- 	PSet DBParameters ={
-	    untracked string authenticationPath="/afs/cern.ch/cms/DB/conddb"
-	}
-    }
-
-    es_source b = PoolDBESSource {
-	string appendToDataLabel = "SiStripBadFiber_v1"
-	VPSet toGet = {	{ string record = "SiStripBadFiberRcd"   string tag = "SiStripBadFiber_TBuffer_VenturiList_v1"} }
-	string connect = "oracle://cms_orcoff_int2r/CMS_COND_STRIP" 
-	#string connect = "sqlite_file:dbfile.db"
-	string timetype = "runnumber"
-	untracked string BlobStreamerName="TBufferBlobStreamingService"
-     	PSet DBParameters ={
-	    untracked string authenticationPath="/afs/cern.ch/cms/DB/conddb"
-	}
-    }
-
-    es_module = SiStripQualityESProducer {
-	
-	string appendToDataLabel = "test1"
-
-	untracked bool PrintDebug=true
-	
-	VPSet ListOfRecordToMerge = {
-	    { string record = "SiStripBadModuleRcd"  string tag = "SiStripBadModule_v1"} ,
-	    { string record = "SiStripBadFiberRcd"   string tag = "SiStripBadFiber_v1"} 
-	}    	
-    }
-
+    include "CalibTracker/Configuration/data/Tracker_FrontierConditions_TIF.cff"
+    #include "CalibTracker/Configuration/data/Tracker_OrconConditions_TIF.cff"
 
   
   ############ Digitization ############
@@ -93,7 +51,8 @@ process TRACKRECONSTRUCTION = {
 
   ################ MonitorPedestal and Raw Data ################
     # DQM services
-    service = DaqMonitorROOTBackEnd{}
+    include "DQMServices/Core/data/DQM.cfg"
+
 
     # SiStripMonitorQuality
     include "DQM/SiStripMonitorPedestals/data/SiStripMonitorQuality.cfi"
